k3s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: bier-ingress
  namespace: bier
spec:
  rules:
  - host: beer.tino.sh
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: bier-frontend-service
            port: 
              number: 80
  tls:
  - hosts:
    - beer.tino.sh
    secretName: beer-tino-sh-tls
